--- a/css/kube.css
+++ b/css/kube.css
@@ -628,8 +628,8 @@ table caption {
 }
 table th,
 table td {
-  border-bottom: 1px solid #eeeeee;
-  padding: 0.825em 1.0999999999999999em;
+  border: 1px solid #000000;
+  padding: 3px 10px;
 }
 table tfoot th,
 table tfoot td {
