--- a/css/custom.css
+++ b/css/custom.css
@@ -3,7 +3,8 @@
  *  License: Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)
  */
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Playfair Display SC", serif;
+  /*font-family: "Playfair Display SC", serif;*/
+  font-family: "Lato", Arial, sans-serif;
   color: #333333; }
 
 a, p, li {
